@@ -7,31 +7,37 @@
     source="*"
     destination="4.0"
     profile="Products.EEAContentTypes:default">
-
     <genericsetup:upgradeDepends
       title="Import all steps from Products.EEAContentTypes profile"
       import_profile="Products.EEAContentTypes:default"
       />
-
   </genericsetup:upgradeSteps>
 
   <genericsetup:upgradeSteps
     source="4.0"
     destination="4.2"
     profile="Products.EEAContentTypes:default">
-
     <genericsetup:upgradeDepends
         title="Dependency on types info"
         import_profile="Products.EEAContentTypes:default"
         import_steps="typeinfo"
         />
-
     <genericsetup:upgradeStep
       title="Migrate GISApplication content type"
       description="Move from a TTW definition to a disk based class"
       handler="Products.EEAContentTypes.setuphandlers.upgrade_gisapplication"
       />
+  </genericsetup:upgradeSteps>
 
+  <genericsetup:upgradeSteps
+    source="*"
+    destination="4.2.1"
+    profile="Products.EEAContentTypes:default">
+    <genericsetup:upgradeStep
+      title="Make the Plone site implement IEEAPloneSite"
+      description=""
+      handler="Products.EEAContentTypes.setuphandlers.upgrade_plonesite_interface"
+      />
   </genericsetup:upgradeSteps>
 
 </configure>
